--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
-    "mongoose": "^6.9.0"
+    "mongoose": "^6.9.0",
+    "twitter-api-v2": "^1.14.0"
   }
 }
