--- a/package.json
+++ b/package.json
@@ -1,48 +1,22 @@
 {
-
-
-
-
-
-    "name": "test-bot",
-    "version": "1.0.0",
-    "description": "",
-    "main": "src/app.js",
-    "scripts": {
-
-
-
-
-
-        "start": "nodemon src/app.js",
-        "dev": "NODE_ENV=development nodemon src/app.js",
-        "prod": "NODE_ENV=production node src/app.js",
-        "deploy-commands:dev": "NODE_ENV=development node src/deploy-commands.js",
-        "deploy-commands:prod": "NODE_ENV=production node src/deploy-commands.js"
-
-
-
-
-
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-
-
-
-
-
-        "discord.js": "^14.7.1",
-        "dotenv": "^16.0.3",
-        "mongoose": "^6.9.0",
-        "twitter-api-v2": "^1.14.0"
-
-
-
-
-
-    }
-
+  "name": "test-bot",
+  "version": "1.0.0",
+  "description": "",
+  "main": "src/app.js",
+  "scripts": {
+    "start": "node src/app.js",
+    "dev": "NODE_ENV=development nodemon src/app.js",
+    "prod": "NODE_ENV=production node src/app.js",
+    "deploy-commands:dev": "NODE_ENV=development node src/deploy-commands.js",
+    "deploy-commands:prod": "NODE_ENV=production node src/deploy-commands.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "discord.js": "^14.7.1",
+    "dotenv": "^16.0.3",
+    "mongoose": "^6.9.0",
+    "twitter-api-v2": "^1.14.0"
+  }
 }
