--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "dotenv": "^16.0.3",
     "joi": "^17.7.1",
     "mongoose": "^6.9.0",
-    "twitter-api-v2": "^1.14.0"
+    "twitter-api-v2": "^1.14.0",
+    "xrpl": "^2.8.0-beta.0",
+    "xumm-sdk": "^1.7.3"
   }
 }
